# RelativisticRaytracer

./: .gitignore  CMakeLists.txt  README.md
Graphics/: TracingEngine.cpp  TracingEngine.h
RelativisticRaytracer/: CMakeLists.txt  RelativisticRaytracer.cpp  RelativisticRaytracer.h
RelativisticRaytracer/Graphics/: TracingEngine.cpp  TracingEngine.h
resources/shaders/: raytracer_fragment.glsl
